# MinNote

./: AGENTS.md  README.md  eslint.config.js  package.json
scripts/: build-sidecar.sh  create-dmg.sh  package-notarized-app.sh  release-local.sh  run-signed-dev-app.sh  run-tauri-build.sh  run-vitest.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.Helper.plist  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_runtime.rs  commands.rs  error.rs  lib.rs  main.rs  state.rs  sync.rs  window_controls.rs
src-tauri/src/application/: dto.rs  services.rs
src-tauri/src/application/services/: blocks.rs  bootstrap.rs  documents.rs  mod.rs  preferences.rs  tests.rs  workspace_payload.rs
src-tauri/src/commands/: blocks.rs  helpers.rs  icloud_sync.rs  mod.rs  preferences.rs  workspace.rs
src-tauri/src/domain/: models.rs
src-tauri/src/infrastructure/: cloudkit_bridge.rs  legacy_identity_migration.rs  macos_remote_notifications.rs  mod.rs  sync_engine.rs
src-tauri/src/infrastructure/sqlite/: app_state.rs  blocks.rs  common.rs  documents.rs  mod.rs  remote_sync.rs  schema.rs  sync.rs
src-tauri/src/infrastructure/sqlite/blocks/: mod.rs  tests.rs
src-tauri/src/infrastructure/sqlite/common/: blocks.rs  document_pipeline.rs  markdown_storage.rs  mod.rs
src-tauri/src/infrastructure/sqlite/documents/: mod.rs  row_mapping.rs  tests.rs
src-tauri/src/ports/: models.rs  repositories.rs
src-tauri/src/window_controls/: mod.rs  window_state.rs
sync-sidecar/: Package.swift
(+120 files in other folders)
